tests/snapshots/parser_snapshots__substitution__nested_command_sub.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo $(echo $(whoami))\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    CommandSubstitution(
                        "echo $(whoami)",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
